force-app/main/default/objects/Integration_Run_Step__c/Integration_Run_Step__c.object-meta.xml
<CustomObject>
    <description>Represents one execution step inside an integration run.</description>
    <label>Integration Run Step</label>
    <nameField>
        <displayFormat>STEP-{000000}</displayFormat>
        <label>Integration Run Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Run Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>