force-app/main/default/objects/Integration_Run_Step__c/fields/Integration_Run__c.field-meta.xml
<CustomField>
    <fullName>Integration_Run__c</fullName>
    <label>Integration Run</label>
    <referenceTo>Integration_Run__c</referenceTo>
    <relationshipLabel>Integration Run Steps</relationshipLabel>
    <relationshipName>Integration_Run_Steps</relationshipName>
    <type>MasterDetail</type>
</CustomField>