force-app/main/default/objects/Integration_Run_Step__c/fields/Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Key__c</fullName>
    <label>Node Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>