force-app/main/default/objects/Integration_Run_Step__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>