force-app/main/default/objects/Integration_Run_Step__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>

            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>

            <value>
                <fullName>Running</fullName>
            </value>

            <value>
                <fullName>Success</fullName>
            </value>

            <value>
                <fullName>Error</fullName>
            </value>

            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>